--- a/text-analyzer-starter-files-master/index.html
+++ b/text-analyzer-starter-files-master/index.html
@@ -6,6 +6,7 @@
 
          <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script> 
          <link href="https://fonts.googleapis.com/css?family=Bungee+Shade" rel="stylesheet">
+         <link href="https://fonts.googleapis.com/css?family=Bungee+Inline" rel="stylesheet"> 
          <meta name="viewport" content="width=device-width, initial-scale=1">
          <script src="app.js" type="text/javascript"></script>
          <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/4.2.0/normalize.min.css">
