--- a/text-analyzer-starter-files-master/index.html
+++ b/text-analyzer-starter-files-master/index.html
@@ -7,6 +7,12 @@
          <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script> 
          <link href="https://fonts.googleapis.com/css?family=Bungee+Shade" rel="stylesheet">
          <link href="https://fonts.googleapis.com/css?family=Bungee+Inline" rel="stylesheet"> 
+
+
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+
          <meta name="viewport" content="width=device-width, initial-scale=1">
          <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/4.2.0/normalize.min.css">
          <link rel="stylesheet" type="text/css" href="main.css">
@@ -15,44 +21,38 @@
 </head>
 <body>
     <div class="container">
-        <main>
-            <h1>Text analzyer</h1>
-            <div class="pContain">
-            <p class="sub">Paste in text below, submit, and get some basic stats back.</p>
-            </div>
-            <form>
-                <div class="col">
-                    <label for="user-text">Text to analyze</label>
-                    <textarea  rows="20" id="user-text" name="user-text" placeholder="Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua." require class="js-userInput"></textarea>
-                </div>
-
-                <div class="col">
-                 <dl class="hidden text-report">
-                <dt>Word count</dt>
-                <dd class="js-another"></dd>
-
-                <dt>Unique word count</dt>
-                <dd class="js-unique"></dd>
-
-                <dt>Average word length</dt>
-                <dd class="js-sLength"></dd>
-
-                <dt>Average sentence length</dt>
-                <dd class="js-sent"></dd>
-            </dl>
-                </div>
-
-
-                <div>
-                    <button type="submit" class="calcButton" onclick="return false">Analyze it!</button>
-                </div>
-            </form>
-
-           
-        </main>
+  <main>
+    <h1>Text analzyer</h1>
+    <div class="pContain">
+      <p class="sub">Paste in text below, submit, and get some basic stats back.</p>
     </div>
+    <div class="row">
+      <div class="col-sm-6">
+    <form>
+        <textarea rows="20" id="user-text" name="user-text" placeholder="Enter text to be analyzed" required class="js-userInput"></textarea>
+        </form>
+      </div>
 
-    <!-- link to jquery -->
-    <!-- link to your app.js -->
+      <div class="col-sm-6">
+        <dl class="hidden text-report">
+          <dt>Word count</dt>
+          <dd class="js-another"></dd>
+
+          <dt>Unique word count</dt>
+          <dd class="js-unique"></dd>
+
+          <dt>Average word length</dt>
+          <dd class="js-sLength"></dd>
+
+          <dt>Average sentence length</dt>
+          <dd class="js-sent"></dd>
+        </dl>
+      </div>
+    </div>
+      <div class="row">
+        <button type="submit" class="calcButton" onclick="return false">Analyze it!</button>
+      </div>
+  </main>
+</div>
 </body>
 </html>
